Major structural changes Separability Improved Try etc.